Fixed image overflowing

--- a/_sass/electromagnetic.scss
+++ b/_sass/electromagnetic.scss
@@ -13,5 +13,6 @@
 
    .project-mockup {
       width: 80%;
+      max-height: 100%;
    }
 }
